--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -26,7 +26,7 @@
     -->
 
     <!-- Add the base tag to handle routing correctly -->
-    <base href="/frontend/" />
+    <base href="/" />
 
     <title>Noshly</title>
   </head>
